<resources>
    <string name="app_name">ProyectoA_PMDM_T2_PedroJiménez</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="distancia_en_metros">Distancia en metros</string>
    <string name="seleccionar_filtro">Seleccionar Filtro</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="error_campo_vacio">Este campo no puede estar vacío</string>
    <string name="buscador_de">Buscador de centros educativos de La Comunidad de Madrid</string>
    <string name="consultar_listado">Consultar Listado</string>
    <string name="numero_invalido">El número introducido sobrepasa los límites</string>
    <string name="lat">Latitud:\t</string>
    <string name="lon">Longitud:\t</string>
    <string name="dis">Distancia: %d metros</string>
    <string name="error_datos">Error, no se han obtenido los datos</string>
    <string name="punto_introducido">"Sólo has introducido el punto"</string>
    <string name="listado">Listado</string>
    <string name="mapa">Mapa</string>
    <string name="consultar_mapa">Consultar Mapa</string>
    <string name="error_no_datos">No hay datos con filtros introducidos</string>
    <string name="error_api">Error al conectar con la API</string>
    <string name="nombre">Nombre:</string>
    <string name="direccion">Dirección:</string>
    <string name="codigo_postal">Código Postal:</string>
    <string name="localidad">Localidad:</string>
    <string name="descripcion">Descripción:</string>
    <string name="label">Detalles del Centro Educativo</string>
</resources>